packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/33_aces_1_3_1_acescg_vfx.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>ACES 1.3.1 ACEScg VFX Pipeline</aces:description>
        <aces:author>
            <aces:name>VFX Supervisor</aces:name>
            <aces:emailAddress>vfxsup@studio.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:b4a6c2b6-f10a-4fea-afbe-ce7941be2a93</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>VFX Compositing in ACEScg - ACES 1.3.1</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:89ad7ae3-5791-4911-b0b9-4aa8d7252071</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>1</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="false">
            <aces:description>ARRI Alexa LogC EI800 to ACES2065-1</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:IDT.ARRI.Alexa-v3-logC-EI800.a1.v2</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="false">
            <aces:description>VFX Grade in ACEScg</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScg.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScg_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ASC_SOP>
                <cdl:Slope>1.0 1.0 1.0</cdl:Slope>
                <cdl:Offset>0.0 0.0 0.0</cdl:Offset>
                <cdl:Power>1.0 1.0 1.0</cdl:Power>
            </cdl:ASC_SOP>
            <cdl:ASC_SAT>
                <cdl:Saturation>1.0</cdl:Saturation>
            </cdl:ASC_SAT>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>RRT + Rec.709 ODT</aces:description>
            <aces:referenceRenderingTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:RRT.a1.0.3</aces:transformId>
            </aces:referenceRenderingTransform>
            <aces:outputDeviceTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:ODT.Academy.Rec709_100nits_dim.a1.0.3</aces:transformId>
            </aces:outputDeviceTransform>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
