packages/aces-amf-lib/tests/Generated_Samples_AMF/invalid_AMFs/invalid_21_missing_cdl_id_in_ccc.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>INVALID: CCC File Missing Referenced CDL ID</aces:description>
        <aces:author>
            <aces:name>Test Suite</aces:name>
            <aces:emailAddress>test@example.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:9e000fdd-600e-493a-a195-e813393d778e</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>ColorCorrectionRef points to non-existent ID in CCC</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:dcbf90ae-9f35-40b1-8e19-65b5ae9393b9</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>2</aces:majorVersion>
                <aces:minorVersion>0</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="true">
            <aces:description>Test IDT</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:CSC.Arri.LogC4_to_ACES.a2.v1</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="true">
            <aces:description>Look referencing missing CCC ID</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v2.0:CSC.ACES2065-1.ACEScct.a1.v1</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v2.0:CSC.ACEScct.ACES2065-1.a1.v1</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ColorCorrectionRef ref="NONEXISTENT_SHOT_ID"/>
            <aces:file>show_cdls.ccc</aces:file>
        </aces:lookTransform>
        <aces:outputTransform applied="true">
            <aces:description>Test ODT</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Output.Academy.Rec709-D65_100nit_in_Rec709-D65_BT1886.a2.v1</aces:transformId>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
